--- a/GetCookie.conf
+++ b/GetCookie.conf
@@ -31,12 +31,12 @@ https:\/\/www\.52pojie\.cn\/home\.php\?mod=space url script-request-header https
 ^https:\/\/act.10010.com\/SigninApp(.*?)\/signin\/daySign url script-request-header https://raw.githubusercontent.com/chavyleung/scripts/master/10010/10010.cookie.js
 ^https:\/\/m.client.10010.com\/dailylottery\/static\/(textdl\/userLogin|active\/findActivityInfo) url script-request-header https://raw.githubusercontent.com/chavyleung/scripts/master/10010/10010.cookie.js
 
-# QQ音乐获取cookie(需要TF195+)
-^https:\/\/u.y.qq.com\/cgi\-bin\/musicu.fcg url script-request-body https://raw.githubusercontent.com/chavyleung/scripts/master/qqmusic/qqmusic.cookie.js
-^https:\/\/u.y.qq.com\/cgi\-bin\/musicu.fcg url script-response-body https://raw.githubusercontent.com/chavyleung/scripts/master/qqmusic/qqmusic.cookie.js
-
 # 美团
 ^https:\/\/i.meituan.com\/evolve\/signin\/signpost\/ url script-request-body https://raw.githubusercontent.com/chavyleung/scripts/master/meituan/meituan.cookie.js
 
 # 招行信用卡公众号 (By @iNotification)
 https://weclub\.ccc\.cmbchina.com/SCRMCustomActivityFront/checkin/request/get-home-data\.json\?activityCode=checkin url script-request-header https://raw.githubusercontent.com/nzw9314/QuantumultX/master/Task/cmbchina.js
+
+# 中国移动查话费 获取cookie
+^https:\/\/clientaccess.10086.cn\/biz-orange\/LN\/uamrandcodelogin\/autoLogin url script-request-body https://raw.githubusercontent.com/chavyleung/scripts/master/10086/10086.fee.cookie.js
+^https:\/\/clientaccess.10086.cn\/biz-orange\/BN\/realFeeQuery\/getRealFee url script-request-body https://raw.githubusercontent.com/chavyleung/scripts/master/10086/10086.fee.cookie.js
