--- a/GetCookie.conf
+++ b/GetCookie.conf
@@ -3,7 +3,7 @@
 #Cookie获取成功后在重写里禁用掉本订阅
 #Cookie失效时在重写里启用本订阅
 
-hostname = *.rr.tv, www.52pojie.cn, mobwsa.ximalaya.com, *.video.qq.com, act.10010.com, m.client.10010.com, clientaccess.10086.cn, weclub.ccc.cmbchina.com
+hostname = *.rr.tv, www.52pojie.cn, mobwsa.ximalaya.com, *.video.qq.com, act.10010.com, m.client.10010.com, clientaccess.10086.cn
 
 # 京东签到获取cookie
 https:\/\/api\.m\.jd\.com\/client\.action.*functionId=signBean url script-request-header https://raw.githubusercontent.com/NobyDa/Script/master/JD-DailyBonus/JD_DailyBonus.js
@@ -31,9 +31,6 @@ https:\/\/www\.52pojie\.cn\/home\.php\?mod=space url script-request-header https
 
 # 美团
 ^https:\/\/i.meituan.com\/evolve\/signin\/signpost\/ url script-request-body https://raw.githubusercontent.com/chavyleung/scripts/master/meituan/meituan.cookie.js
-
-# 招行信用卡公众号 (By @iNotification)
-https://weclub\.ccc\.cmbchina.com/SCRMCustomActivityFront/checkin/request/get-home-data\.json\?activityCode=checkin url script-request-header https://raw.githubusercontent.com/nzw9314/QuantumultX/master/Task/cmbchina.js
 
 # 中国移动查话费 获取cookie
 ^https:\/\/clientaccess.10086.cn\/biz-orange\/LN\/uamrandcodelogin\/autoLogin url script-request-body https://raw.githubusercontent.com/chavyleung/scripts/master/10086/10086.fee.cookie.js
