--- a/Rewrite.conf
+++ b/Rewrite.conf
@@ -219,6 +219,8 @@ hostname = *.amemv.com, *.iydsj.com, *.k.sohu.com, *.kakamobi.cn, *.kingsoft-off
 ^https?+:\/\/ms\.jr\.jd\.com\/gw\/generic\/aladdin\/na\/m\/getLoadingPicture url reject-200
 # > 界面新闻
 ^https?+:\/\/img\.jiemian\.com\/ads\/ url reject-200
+# > 交管12123
+^https://gab\.122\.gov\.cn/eapp/m/sysquery/ url reject-200
 # > 驾校一点通
 ^https?+:\/\/api\.jxedt\.com\/ad\/ url reject-200
 ^https?+:\/\/richmanapi\.jxedt\.com\/api\/ad\/ url reject-200
