--- a/Man.conf
+++ b/Man.conf
@@ -25,10 +25,10 @@ https://portal.caipin.pro/modules/servers/V2raySocks/quanx.php?sid=*&token=*, ta
 [filter_remote]
 https://raw.githubusercontent.com/re2/g/master/AppleUpdate.list, tag=AppleUpdate, enabled=true
 https://raw.githubusercontent.com/re2/g/master/AdRule.list, tag=🚫广告拦截, enabled=true
-https://raw.githubusercontent.com/re2/g/master/HKMTMedia.list, tag=港澳台媒体, enabled=true
+https://raw.githubusercontent.com/re2/g/master/HKMTMedia.list, tag=🔅港澳台媒体, enabled=true
 https://raw.githubusercontent.com/re2/g/master/Global.list, tag=🌏全球加速, enabled=true
 https://raw.githubusercontent.com/re2/g/master/Apple.list, tag=🍎苹果服务, enabled=true
-https://raw.githubusercontent.com/re2/g/master/Direct.list, tag=中国直连, enabled=true
+https://raw.githubusercontent.com/re2/g/master/Direct.list, tag= 🎯中国直连, enabled=true
 
 [rewrite_remote]
 https://raw.githubusercontent.com/re2/g/master/Rewrite.conf, tag=eHpo1 Rewrite, enabled=true
