--- a/Man.conf
+++ b/Man.conf
@@ -23,12 +23,12 @@ https://dler.cloud/subscribe/*?protocols=ss&list=quantumultx&match=BGP, tag=Dler
 https://portal.caipin.pro/modules/servers/V2raySocks/quanx.php?sid=*&token=*, tag=ALI-H, img-url=https://raw.githubusercontent.com/re2/Qure/master/IconSet/JIYOU.png, enabled=true
 
 [filter_remote]
-https://raw.githubusercontent.com/re2/g/master/AppleUpdate.list, tag=AppleUpdate, enabled=true
+https://raw.githubusercontent.com/re2/g/master/AppleUpdate.list, tag=⛔屏蔽更新, enabled=true
 https://raw.githubusercontent.com/re2/g/master/AdRule.list, tag=🚫广告拦截, enabled=true
 https://raw.githubusercontent.com/re2/g/master/HKMTMedia.list, tag=🔅港澳台媒体, enabled=true
 https://raw.githubusercontent.com/re2/g/master/Global.list, tag=🌏全球加速, enabled=true
 https://raw.githubusercontent.com/re2/g/master/Apple.list, tag=🍎苹果服务, enabled=true
-https://raw.githubusercontent.com/re2/g/master/Direct.list, tag= 🎯中国直连, enabled=true
+https://raw.githubusercontent.com/re2/g/master/Direct.list, tag=🎯中国直连, enabled=true
 
 [rewrite_remote]
 https://raw.githubusercontent.com/re2/g/master/Rewrite.conf, tag=eHpo1 Rewrite, enabled=true
