--- a/Man.conf
+++ b/Man.conf
@@ -1,10 +1,7 @@
 [general]
 server_check_url= http://www.qualcomm.cn/generate_204
-
 geo_location_checker=http://ip-api.com/json/?lang=en, https://raw.githubusercontent.com/re2/g/master/IP_API.js
-
 dns_exclusion_list = *.cmpassport.com,  *.jegotrip.com.cn, *.icitymobile.mobi, *.pingan.com.cn, *.cmbchina.com
-
 excluded_routes=192.168.0.0/16, 172.16.0.0/12, 100.64.0.0/10, 10.0.0.0/8, 127.0.0.0/8, 224.0.0.0/24
 
 [dns]
@@ -19,8 +16,7 @@ static=AppleUpdate, reject, direct, img-url=https://raw.githubusercontent.com/re
 
 [server_remote]
 https://dler.cloud/subscribe/*?protocols=ss&list=quantumultx&match=BGP, tag=Dler, img-url=https://raw.githubusercontent.com/re2/Qure/master/IconSet/Dler.png, enabled=true
-
-https://portal.caipin.pro/modules/servers/V2raySocks/quanx.php?sid=*&token=*, tag=ALI-H, img-url=https://raw.githubusercontent.com/re2/Qure/master/IconSet/JIYOU.png, enabled=true
+https://portal.caipin.pro/modules/servers/V2raySocks/quanx.php?sid=81817&token=*, tag=ALI-H, img-url=https://raw.githubusercontent.com/re2/Qure/master/IconSet/JIYOU.png, enabled=true
 
 [filter_remote]
 https://raw.githubusercontent.com/re2/g/master/AppleUpdate.list, tag=⛔屏蔽更新, enabled=true
@@ -44,39 +40,39 @@ final, Final
 [task_local]
 # 京东
 #浏览器登录 https://bean.m.jd.com 点击签到并且出现签到日历
-3 0 * * * https://raw.githubusercontent.com/NobyDa/Script/master/JD-DailyBonus/JD_DailyBonus.js, tag=京东, img-url=https://raw.githubusercontent.com/Orz-3/task/master/jd.png,enabled=true
+2 09 * * * https://raw.githubusercontent.com/NobyDa/Script/master/JD-DailyBonus/JD_DailyBonus.js, tag=京东, img-url=https://raw.githubusercontent.com/Orz-3/task/master/jd.png,enabled=true
 
 # 52破解
 #浏览器访问https://www.52pojie.cn/home.php?mod=space 即可
-2 0 * * * https://raw.githubusercontent.com/NobyDa/Script/master/52pojie-DailyBonus/52pojie.js, tag=52破解, img-url=https://raw.githubusercontent.com/Orz-3/task/master/52pj.png,enabled=true
+2 09 * * * https://raw.githubusercontent.com/NobyDa/Script/master/52pojie-DailyBonus/52pojie.js, tag=52破解, img-url=https://raw.githubusercontent.com/Orz-3/task/master/52pj.png,enabled=true
 
 # 美团
 #打开 APP , 然后手动签到 1 次, (`首页` > `红包签到`)
-3 0 * * * https://raw.githubusercontent.com/chavyleung/scripts/master/meituan/meituan.js, tag=美团, img-url=https://raw.githubusercontent.com/Orz-3/task/master/meituan.png,enabled=true
+3 09 * * * https://raw.githubusercontent.com/chavyleung/scripts/master/meituan/meituan.js, tag=美团, img-url=https://raw.githubusercontent.com/Orz-3/task/master/meituan.png,enabled=true
 
 # 中国联通
 #1打开 APP , 进入签到页面, 系统提示: `获取刷新链接: 成功`,然后手动签到 1 次
 #2首页>天天抽奖, 系统提示 `2` 次: `获取Cookie: 成功 (登录抽奖)` 和 `获取Cookie: 成功 (抽奖次数)`
-1 0 * * * https://raw.githubusercontent.com/chavyleung/scripts/master/10010/10010.js, tag=中国联通, img-url=https://raw.githubusercontent.com/Orz-3/task/master/10010.png,enabled=true
+1 09 * * * https://raw.githubusercontent.com/chavyleung/scripts/master/10010/10010.js, tag=中国联通, img-url=https://raw.githubusercontent.com/Orz-3/task/master/10010.png,enabled=true
 
 # 腾讯视频
 #1.手机浏览器访问并登录: https://film.qq.com/
-2 0 * * * https://raw.githubusercontent.com/chavyleung/scripts/master/videoqq/videoqq.js, tag=腾讯视频, img-url=https://raw.githubusercontent.com/Orz-3/task/master/videoqq.png,enabled=true
+2 09 * * * https://raw.githubusercontent.com/chavyleung/scripts/master/videoqq/videoqq.js, tag=腾讯视频, img-url=https://raw.githubusercontent.com/Orz-3/task/master/videoqq.png,enabled=true
 
 # 喜马拉雅
 #打开 APP, 访问下右下角`账号`
-3 0 * * * https://raw.githubusercontent.com/chavyleung/scripts/master/ximalaya/ximalaya.js, tag=喜马拉雅, img-url=https://raw.githubusercontent.com/Orz-3/task/master/ximalaya.png,enabled=true
+3 09 * * * https://raw.githubusercontent.com/chavyleung/scripts/master/ximalaya/ximalaya.js, tag=喜马拉雅, img-url=https://raw.githubusercontent.com/Orz-3/task/master/ximalaya.png,enabled=true
 
 # 人人视频
 #打开 APP, 访问下`个人中心`
-2 0 * * * https://raw.githubusercontent.com/chavyleung/scripts/master/rrtv/rrtv.js, tag=人人视频, img-url=https://raw.githubusercontent.com/Orz-3/task/master/rrtv.png,enabled=true
+2 09 * * * https://raw.githubusercontent.com/chavyleung/scripts/master/rrtv/rrtv.js, tag=人人视频, img-url=https://raw.githubusercontent.com/Orz-3/task/master/rrtv.png,enabled=true
 
 # 爱奇艺
 #打开App,访问下右下角 `我的
-1 0 * * * https://raw.githubusercontent.com/NobyDa/Script/master/iQIYI-DailyBonus/iQIYI.js, tag=爱奇艺, img-url=https://raw.githubusercontent.com/Orz-3/task/master/iQIYI.png,enabled=true
+1 09 * * * https://raw.githubusercontent.com/NobyDa/Script/master/iQIYI-DailyBonus/iQIYI.js, tag=爱奇艺, img-url=https://raw.githubusercontent.com/Orz-3/task/master/iQIYI.png,enabled=true
 
 # 中国移动
-1 0 * * * https://raw.githubusercontent.com/chavyleung/scripts/master/10086/10086.fee.js, tag=中国移动, img-url=https://raw.githubusercontent.com/Orz-3/task/master/10086.png,enabled=true
+1 09 * * * https://raw.githubusercontent.com/chavyleung/scripts/master/10086/10086.fee.js, tag=中国移动, img-url=https://raw.githubusercontent.com/Orz-3/task/master/10086.png,enabled=true
 
 [rewrite_local]
 
