--- a/GetCookie.conf
+++ b/GetCookie.conf
@@ -3,7 +3,7 @@
 #Cookie获取成功后在重写里禁用掉本订阅
 #Cookie失效时在重写里启用本订阅
 
-hostname = *.rr.tv, www.52pojie.cn, mobwsa.ximalaya.com, *.video.qq.com, act.10010.com, m.client.10010.com
+hostname = *.rr.tv, www.52pojie.cn, mobwsa.ximalaya.com, *.video.qq.com, act.10010.com, m.client.10010.com, clientaccess.10086.cn
 
 # 京东签到获取cookie
 https:\/\/api\.m\.jd\.com\/client\.action.*functionId=signBean url script-request-header https://raw.githubusercontent.com/NobyDa/Script/master/JD-DailyBonus/JD_DailyBonus.js
@@ -24,10 +24,14 @@ https:\/\/www\.52pojie\.cn\/home\.php\?mod=space url script-request-header https
 # 人人视频获取cookie
 ^https:\/\/api\.rr\.tv\/user\/profile url script-request-header https://raw.githubusercontent.com/chavyleung/scripts/master/rrtv/rrtv.cookie.js
 
-# 中国联通 获取cookie
+# 中国联通获取cookie
 ^https:\/\/act.10010.com\/SigninApp\/signin\/querySigninActivity.htm url script-request-header https://raw.githubusercontent.com/chavyleung/scripts/master/10010/10010.cookie.js
 ^https:\/\/act.10010.com\/SigninApp(.*?)\/signin\/daySign url script-request-header https://raw.githubusercontent.com/chavyleung/scripts/master/10010/10010.cookie.js
 ^https:\/\/m.client.10010.com\/dailylottery\/static\/(textdl\/userLogin|active\/findActivityInfo) url script-request-header https://raw.githubusercontent.com/chavyleung/scripts/master/10010/10010.cookie.js
 
-# 美团
+# 美团获取cookie
 ^https:\/\/i.meituan.com\/evolve\/signin\/signpost\/ url script-request-body https://raw.githubusercontent.com/chavyleung/scripts/master/meituan/meituan.cookie.js
+
+# 中国移动获取cookie
+^https:\/\/clientaccess.10086.cn\/biz-orange\/LN\/uamrandcodelogin\/autoLogin url script-request-body https://raw.githubusercontent.com/chavyleung/scripts/master/10086/10086.fee.cookie.js
+^https:\/\/clientaccess.10086.cn\/biz-orange\/BN\/realFeeQuery\/getRealFee url script-request-body https://raw.githubusercontent.com/chavyleung/scripts/master/10086/10086.fee.cookie.js
