--- a/Js.conf
+++ b/Js.conf
@@ -13,17 +13,11 @@
 ^https?://api\.weibo\.cn/2/(statuses|groups)/(unread_hot_|friends_)?timeline url script-response-body https://raw.githubusercontent.com/re2/g/master/weibointl_timeline.js
 
 # 抖音去广告去水印 (By Choler)
-;^https://.*\.amemv\.com/aweme/v2/feed/ url request-header ^GET /aweme/v2/feed/(.+) request-header GET /aweme/v1/feed/$1
-;^https:\/\/.*\.amemv\.com\/aweme\/v.*\/(feed|post) url script-response-body https://raw.githubusercontent.com/re2/g/master/Aweme.js
+^https://.*\.amemv\.com/aweme/v2/feed/ url request-header ^GET /aweme/v2/feed/(.+) request-header GET /aweme/v1/feed/$1
+^https:\/\/.*\.amemv\.com\/aweme\/v.*\/(feed|post) url script-response-body https://raw.githubusercontent.com/re2/g/master/Aweme.js
 
 # 去微信公众号广告 (By Choler)
 ^https?:\/\/mp\.weixin\.qq\.com\/mp\/getappmsgad url script-response-body https://raw.githubusercontent.com/re2/g/master/WeChat.js
 
 # 人人视频（加上了看电影的解锁）
 ^https:\/\/api\.rr\.tv(\/user\/privilege\/list|\/ad\/getAll|\/rrtv-video\/v4plus\/season\/detail) url script-response-body https://raw.githubusercontent.com/re2/g/master/rrtv.js
-
-# tiktok封区解锁
-(?<=(carrier|account|sys)_region=)CN url 307 JP
-(?<=version_code=)\d{1,}.\d{1}\.\d{1} url 307 14.0.0
-# Resso
-(?<=(carrier|account|sys|sim)_region=)cn url 307 in
