--- a/TikTokUK.conf
+++ b/TikTokUK.conf
@@ -1,4 +1,4 @@
-hostname = *.tiktokv.com, *.musical.ly, *.snssdk.com
+hostname = *.byteoversea.com
 
 # TikTok By wzw1997007 & Choler
 (?<=_region=)CN(?=&) url 307 UK
