--- a/Rewrite.conf
+++ b/Rewrite.conf
@@ -52,6 +52,10 @@ hostname = *.googlevideo.com, *.amemv.com, *.iydsj.com, *.k.sohu.com, *.kakamobi
 
 # 去微信公众号广告 (By Choler)
 ^https?:\/\/mp\.weixin\.qq\.com\/mp\/getappmsgad url script-response-body https://raw.githubusercontent.com/re2/g/master/WeChat.js
+# > QQNews
+^https://r\.inews\.qq.com\/get(QQNewsUnreadList|RecommendList) url script-response-body https://raw.githubusercontent.com/re2/g/master/QQNews.js
+# > ByteDance
+^https?://[\s\S]*\.snssdk\.com/api/news/feed/v88/ url script-response-body https://raw.githubusercontent.com/re2/g/master/Toutiao.js
 
 # 人人视频（加上了看电影的解锁）
 ^https:\/\/api\.rr\.tv(\/user\/privilege\/list|\/ad\/getAll|\/rrtv-video\/v4plus\/season\/detail) url script-response-body https://raw.githubusercontent.com/re2/g/master/rrtv.js
