--- a/Rewrite.conf
+++ b/Rewrite.conf
@@ -29,7 +29,7 @@ hostname = api.abema.io,api.21jingji.com,service.4gtv.tv,app.58.com,pic?.ajkimg.
 
 # > Zhihu
 ^https://api.zhihu.com/moments/recommend url script-response-body https://raw.githubusercontent.com/re2/g/master/surgezhihufeed.js
-^https://api.zhihu.com/topstory/recommend url script-response-body https://github.com/re2/g/blob/master/surgezhihurecommend.js
+^https://api.zhihu.com/topstory/recommend url script-response-body https://raw.githubusercontent.com/re2/g/master/surgezhihurecommend.js
 ^https://api.zhihu.com/v4/questions url script-response-body https://raw.githubusercontent.com/re2/g/master/surgezhihuanswer.js
 
 # 抖音去广告去水印 (By Choler)
