--- a/Rewrite.conf
+++ b/Rewrite.conf
@@ -2,11 +2,30 @@ hostname = www.google.cn,api.abema.io,api.21jingji.com,service.4gtv.tv,app.58.co
 
 # Script
 
+# 人人视频（加上了看电影的解锁）
+^https:\/\/api\.rr\.tv(\/user\/privilege\/list|\/ad\/getAll|\/rrtv-video\/v4plus\/season\/detail) url script-response-body https://raw.githubusercontent.com/re2/g/master/rrtv.js
+
 # ---(By Choler)---
 # > QQNews
 ^https://r\.inews\.qq.com\/get(QQNewsUnreadList|RecommendList) url script-response-body https://raw.githubusercontent.com/re2/g/master/QQNews.js
 # > ByteDance
 ^https?://[\s\S]*\.snssdk\.com/api/news/feed/v88/ url script-response-body https://raw.githubusercontent.com/re2/g/master/Toutiao.js
+# > 抖音去广告去水印
+^https?+:\/\/[\w-]++\.amemv\.com\/aweme\/v\d\/feed\/ url request-header ^GET \/aweme\/v\d\/feed\/(.+)(\r\n)Host:.+ request-header GET /aweme/v1/feed/$1$2Host: aweme.snssdk.com
+^https?+:\/\/[\w-]++\.amemv\.com\/aweme\/v\d\/aweme\/post\/ url request-header ^GET \/aweme\/v\d\/aweme\/post\/(.+)(\r\n)Host:.+ request-header GET /aweme/v1/aweme/post/$1$2Host: aweme.snssdk.com
+^https?+:\/\/[\w-]++\.amemv\.com\/aweme\/v\d\/follow\/feed\/ url request-header ^GET \/aweme\/v\d\/follow\/feed\/(.+)(\r\n)Host:.+ request-header GET /aweme/v1/follow/feed/$1$2Host: aweme.snssdk.com
+^https?+:\/\/[\w-]++\.amemv\.com\/aweme\/v\d\/nearby\/feed\/ url request-header ^GET \/aweme\/v\d\/nearby\/feed\/(.+)(\r\n)Host:.+ request-header GET /aweme/v1/nearby/feed/$1$2Host: aweme.snssdk.com
+^https?+:\/\/[\w-]++\.amemv\.com\/aweme\/v\d\/search\/item\/ url request-header ^GET \/aweme\/v\d\/search\/item\/(.+)(\r\n)Host:.+ request-header GET /aweme/v1/search/item/$1$2Host: aweme.snssdk.com
+^https?+:\/\/[\w-]++\.amemv\.com\/aweme\/v\d\/general\/search\/single\/ url request-header ^GET \/aweme\/v\d\/general\/search\/single\/(.+)(\r\n)Host:.+ request-header GET /aweme/v1/general/search/single/$1$2Host: aweme.snssdk.com
+^https?+:\/\/[\w-]++\.amemv\.com\/aweme\/v\d\/hot\/search\/video\/list\/ url request-header ^GET \/aweme\/v\d\/hot\/search\/video\/list\/(.+)(\r\n)Host:.+ request-header GET /aweme/v1/hot/search/video/list/$1$2Host: aweme.snssdk.com
+#Script
+^https?+:\/\/[\w-]++\.amemv\.com\/aweme\/v\d\/aweme\/post\/ url script-response-body https://raw.githubusercontent.com/re2/g/master/douyin_qx.js
+^https?+:\/\/[\w-]++\.amemv\.com\/aweme\/v\d\/feed\/ url script-response-body https://raw.githubusercontent.com/re2/g/master/douyin_qx.js
+^https?+:\/\/[\w-]++\.amemv\.com\/aweme\/v\d\/follow\/feed\/ url script-response-body https://raw.githubusercontent.com/re2/g/master/douyin_qx.js
+^https?+:\/\/[\w-]++\.amemv\.com\/aweme\/v\d\/nearby\/feed\/ url script-response-body https://raw.githubusercontent.com/re2/g/master/douyin_qx.js
+^https?+:\/\/[\w-]++\.amemv\.com\/aweme\/v\d\/search\/item\/ url script-response-body https://raw.githubusercontent.com/re2/g/master/douyin_qx.js
+^https?+:\/\/[\w-]++\.amemv\.com\/aweme\/v\d\/general\/search\/single\/ url script-response-body https://raw.githubusercontent.com/re2/g/master/douyin_qx.js
+^https?+:\/\/[\w-]++\.amemv\.com\/aweme\/v\d\/hot\/search\/video\/list\/ url script-response-body https://raw.githubusercontent.com/re2/g/master/douyin_qx.js
 # ------
 
 # ---(By yichahucha)---
@@ -15,6 +34,11 @@ hostname = www.google.cn,api.abema.io,api.21jingji.com,service.4gtv.tv,app.58.co
 ^https?://m?api\.weibo\.c(n|om)/2/(statuses/(unread|extend|positives/get|(friends|video)(/|_)(mix)?timeline)|stories/(video_stream|home_list)|(groups|fangle)/timeline|profile/statuses|comments/build_comments|photo/recommend_list|service/picfeed|searchall|cardlist|page|!/photos/pic_recommend_status|video/tiny_stream_video_list) url script-response-body https://raw.githubusercontent.com/re2/g/master/wb_ad.js
 # > WeChat
 ^https?:\/\/mp\.weixin\.qq\.com\/mp\/getappmsgad url script-response-body https://raw.githubusercontent.com/re2/g/master/WeChat.js
+# > 淘宝历史比价
+^http://.+/amdc/mobileDispatch url script-request-body https://raw.githubusercontent.com/re2/g/master/tb_price.js
+^https?://trade-acs\.m\.taobao\.com/gw/mtop\.taobao\.detail\.getdetail url script-response-body https://raw.githubusercontent.com/re2/g/master/tb_price.js
+# > 京东历史比价
+^https?://api\.m\.jd\.com/client\.action\?functionId=(wareBusiness|serverConfig) url script-response-body https://raw.githubusercontent.com/re2/g/master/jd_price.js
 # ------
 
 # ---(By onewayticket255)---
@@ -22,6 +46,12 @@ hostname = www.google.cn,api.abema.io,api.21jingji.com,service.4gtv.tv,app.58.co
 ^https://api.zhihu.com/moments/recommend url script-response-body https://raw.githubusercontent.com/re2/g/master/surgezhihufeed.js
 ^https://api.zhihu.com/topstory/recommend url script-response-body https://raw.githubusercontent.com/re2/g/master/surgezhihurecommend.js
 ^https://api.zhihu.com/v4/questions url script-response-body https://raw.githubusercontent.com/re2/g/master/surgezhihuanswer.js
+# ------
+
+# ---(By hancj0528)---
+# > 去国际微博应用内广告
+^https?://weibointl\.api\.weibo\.cn/portal\.php\?a=get_coopen_ads url script-response-body https://raw.githubusercontent.com/re2/g/master/weibointl_launch.js
+^https?://api\.weibo\.cn/2/(statuses|groups)/(unread_hot_|friends_)?timeline url script-response-body https://raw.githubusercontent.com/re2/g/master/weibointl_timeline.js
 # ------
 
 # > WeChat Official Account
