--- a/Rewrite.conf
+++ b/Rewrite.conf
@@ -72,6 +72,9 @@ hostname = www.google.cn,api.abema.io,api.21jingji.com,service.4gtv.tv,app.58.co
 ^(http|https):\/\/(www.)?suning\.com\/ url 302 https://suning.com/
 ^(http|https):\/\/(www.)?yhd\.com\/ url 302 https://yhd.com/
 
+# Weibo Short URL
+^http:\/\/t\.cn url 302 https://sinaurl.cn
+
 # Redirect False to True
 # > IGN China to IGN Global
 ^(http|https):\/\/(www.)?ign\.xn--fiqs8s\/ url 302 http://cn.ign.com/ccpref/us
@@ -162,7 +165,7 @@ hostname = www.google.cn,api.abema.io,api.21jingji.com,service.4gtv.tv,app.58.co
 # ---
 # > AcFun - api-new.app.acfun.cn
 ^(http|https):\/\/api-new\.app\.acfun\.cn\/rest\/app\/flash\/screen\/ url reject-200
-# > 爱美剧 - api.bjxkhc.com
+# > AiMeiJu - api.bjxkhc.com
 ^(http|https):\/\/api\.bjxkhc\.com\/index\.php\/app\/ios\/ads\/ url reject-200
 
 # B
@@ -258,6 +261,8 @@ hostname = www.google.cn,api.abema.io,api.21jingji.com,service.4gtv.tv,app.58.co
 # > DayDayCook - *.daydaycook.com
 ^(http|https):\/\/api\.daydaycook\.com\.cn\/daydaycook\/server\/ad\/ url reject-200
 ^(http|https):\/\/cms\.daydaycook\.com\.cn\/api\/cms\/advertisement\/ url reject-200
+# > DingDongMaiCai - maicai.api.ddxq.mobi
+^(http|https):\/\/maicai\.api\.ddxq\.mobi\/advert\/ url reject-200
 
 # E
 # > eLong - mobile-api2011.elong.com,123.59.31.1,119.18.193.135
@@ -303,6 +308,8 @@ hostname = www.google.cn,api.abema.io,api.21jingji.com,service.4gtv.tv,app.58.co
 ^(http|https):\/\/smkmp\.96225.com\/smkcenter\/ad/ url reject-200
 # > Huomao - api.huomao.com
 ^(http|https):\/\/api\.huomao\.com\/channels\/loginAd url reject-200
+# > HanjuTV
+^(http|https):\/\/api\.hanju\.koudaibaobao\.com\/api\/carp\/kp\? url reject-200
 
 # I
 # > iFLY Input - imeclient.openspeech.cn
@@ -346,7 +353,7 @@ hostname = www.google.cn,api.abema.io,api.21jingji.com,service.4gtv.tv,app.58.co
 ^(http|https):\/\/api\.gotokeep\.com\/ads url reject-200
 # > Kuaikan Comics - api.kkmh.com
 ^(http|https):\/\/api\.kkmh\.com\/v\d+\/(ad|advertisement)\/ url reject-200
-# > KOOWO - 122.14.246.33,175.102.178.52 (仅 Surge 可用)
+# > KOOWO - 122.14.246.33,175.102.178.52
 ^(http|https):\/\/((25[0-5]|2[0-4]\d|1\d{2}|[1-9]?\d)\.){3}(25[0-5]|2[0-4]\d|1\d{2}|[1-9]?\d)\/MobileAdServer\/ url reject-200
 ^(http|https):\/\/((25[0-5]|2[0-4]\d|1\d{2}|[1-9]?\d)\.){3}(25[0-5]|2[0-4]\d|1\d{2}|[1-9]?\d)\/EcomResourceServer/AdPlayPage/adinfo url reject-200
 
@@ -446,9 +453,9 @@ hostname = www.google.cn,api.abema.io,api.21jingji.com,service.4gtv.tv,app.58.co
 
 # S
 # ---(Sina)---
-# > Weibo - *.uve.weibo.com,weibointl.api.weibo.cn
-^(http|https):\/\/sdkapp\.uve\.weibo\.com\/interface\/sdk\/(actionad|sdkad)\.php url reject-200
-^(http|https):\/\/wbapp\.uve\.weibo\.com\/wbapplua\/wbpullad\.lua url reject-200
+# > Weibo - *.uve.weibo.com,weibointl.api.weibo.cn,api.weibo.cn, mapi.weibo.com
+# ^(http|https):\/\/sdkapp\.uve\.weibo\.com\/interface\/sdk\/(actionad|sdkad)\.php url reject-200
+# ^(http|https):\/\/wbapp\.uve\.weibo\.com\/wbapplua\/wbpullad\.lua url reject-200
 ^(http|https):\/\/weibointl\.api\.weibo\.cn\/portal\.php\?a=get_coopen_ads url reject-200
 # > tianqitong - tqt.weibo.cn
 ^(http|https):\/\/tqt\.weibo\.cn\/overall\/redirect\.php\?r=(tqt_sdkad|tqtad) url reject-200
@@ -525,9 +532,10 @@ hostname = www.google.cn,api.abema.io,api.21jingji.com,service.4gtv.tv,app.58.co
 # V
 # > VUE - api.vuevideo.net
 ^(http|https):\/\/api\.vuevideo\.net\/api\/v\d\/ad\/ url reject-200
-# > VariFlight - app.variflight.com
+# > VariFlight - app.variflight.com,api.cdmcaac.com
 ^(http|https):\/\/app\.variflight\.com\/ad\/ url reject-200
 ^(http|https):\/\/app\.variflight\.com\/v\d\/advert\/ url reject-200
+^(http|https):\/\/api\.cdmcaac\.com\/ad\/ url reject-200
 # > VISTOPIA - api.vistopia.com.cn
 ^(http|https):\/\/api\.vistopia\.com\.cn\/api\/v\d\/home\/advertisement url reject-200
 
@@ -589,6 +597,6 @@ hostname = www.google.cn,api.abema.io,api.21jingji.com,service.4gtv.tv,app.58.co
 ^(http|https):\/\/api\.izuiyou\.com\/ad\/ url reject-200
 # > Zhan - tiku.zhan.com
 ^(http|https):\/\/tiku\.zhan\.com\/Common\/newAd\/ url reject-200
-# > Zhangyue - webboot.zhangyue.com
+# > Zhangyue - webboot.zhangyue.com,saad.ms.zhangyue.net
 ^(http|https):\/\/webboot\.zhangyue\.com\/zycl\/api\/ad\/ url reject-200
 ^(http|https):\/\/saad\.ms\.zhangyue\.net\/ad url reject-200
