--- a/GetCookie.conf
+++ b/GetCookie.conf
@@ -3,7 +3,7 @@
 #Cookie获取成功后在重写里禁用掉本订阅
 #Cookie失效时在重写里启用本订阅
 
-hostname = *.rr.tv, www.52pojie.cn, mobwsa.ximalaya.com, *.video.qq.com, act.10010.com, m.client.10010.com, clientaccess.10086.cn
+hostname = *.rr.tv, www.52pojie.cn, mobwsa.ximalaya.com, *.video.qq.com, act.10010.com, m.client.10010.com, clientaccess.10086.cn, iface?.iqiyi.com
 
 # 京东签到获取cookie
 https:\/\/api\.m\.jd\.com\/client\.action.*functionId=signBean url script-request-header https://raw.githubusercontent.com/NobyDa/Script/master/JD-DailyBonus/JD_DailyBonus.js
