--- a/Rewrite.conf
+++ b/Rewrite.conf
@@ -431,7 +431,7 @@ hostname = www.google.cn,api.abema.io,api.21jingji.com,service.4gtv.tv,app.58.co
 ^https?:\/\/open\.qyer\.com\/qyer\/config\/get url reject
 ^https?:\/\/media\.qyer\.com\/ad\/ url reject
 # > Qinbaobao - api.qbb6.com
-^https?:\/\/api\.qbb6\.com\/ad\/ url reject
+^(http|https):\/\/api\.qbb6\.com\/ad\/ url reject
 # > QDReader - mage.if.qidian.com
 ^(http|https):\/\/mage\.if\.qidian\.com\/argus\/api\/v\d\/client\/getsplashscreen url reject 
 
