--- a/Rewrite.conf
+++ b/Rewrite.conf
@@ -433,7 +433,7 @@ hostname = www.google.cn,api.abema.io,api.21jingji.com,service.4gtv.tv,app.58.co
 # > Qinbaobao - api.qbb6.com
 ^https?:\/\/api\.qbb6\.com\/ad\/ url reject
 # > QDReader - mage.if.qidian.com
-^(http|https):\/\/mage\.if\.qidian\.com\/argus\/api\/v\d\/client\/getsplashscreen url reject
+^https?:\/\/mage\.if\.qidian\.com\/argus\/api\/v\d\/client\/getsplashscreen url reject
 
 # R
 # > RRtv - msspjh.emarbox.com,api.rr.tv
