--- a/GetCookie.conf
+++ b/GetCookie.conf
@@ -3,7 +3,11 @@
 #Cookie获取成功后在重写里禁用掉本订阅
 #Cookie失效时在重写里启用本订阅
 
-hostname = *.rr.tv, www.52pojie.cn, mobwsa.ximalaya.com, *.video.qq.com, act.10010.com, m.client.10010.com, clientaccess.10086.cn, iface?.iqiyi.com
+hostname = youhui.95516.com, *.rr.tv, www.52pojie.cn, mobwsa.ximalaya.com, *.video.qq.com, act.10010.com, m.client.10010.com, clientaccess.10086.cn, iface?.iqiyi.com
+
+#passerby-b
+#云闪付
+https://youhui.95516.com/newsign/public/app/index.html url script-request-header https://raw.githubusercontent.com/re2/g/master/unipay.js
 
 # 京东签到获取cookie
 https:\/\/api\.m\.jd\.com\/client\.action.*functionId=signBean url script-request-header https://raw.githubusercontent.com/NobyDa/Script/master/JD-DailyBonus/JD_DailyBonus.js
