--- a/Rewrite.conf
+++ b/Rewrite.conf
@@ -25,7 +25,7 @@ hostname = www.google.cn,api.abema.io,api.21jingji.com,service.4gtv.tv,app.58.co
 ^http://.+/amdc/mobileDispatch url script-request-body https://raw.githubusercontent.com/re2/g/master/tb_price.js
 ^https?://trade-acs\.m\.taobao\.com/gw/mtop\.taobao\.detail\.getdetail url script-response-body https://raw.githubusercontent.com/re2/g/master/tb_price.js
 # > 京东历史比价
-^https?://api\.m\.jd\.com/client\.action\?functionId=(wareBusiness|serverConfig) url script-response-body https://raw.githubusercontent.com/re2/g/master/jd_price.js
+^https?://api\.m\.jd\.com/client\.action\?functionId=(wareBusiness|serverConfig|basicConfig) url script-response-body https://raw.githubusercontent.com/re2/g/master/jd_price.js
 # ------
 
 # ---(By onewayticket255)---
