--- a/GetCookie.conf
+++ b/GetCookie.conf
@@ -3,13 +3,13 @@
 #Cookie获取成功后在重写里禁用掉本订阅
 #Cookie失效时在重写里启用本订阅
 
-hostname = www.52pojie.cn, act.10010.com, m.client.10010.com, clientaccess.10086.cn
+hostname = www.52pojie.cn, act.10010.com, m.client.10010.com, clientaccess.10086.cn, mqqapi.reader.qq.com,commontgw6.reader.qq.com,eventv3.reader.qq.com, ifac*.iqiyi.com, tieba.baidu.com, mobwsa.ximalaya.com, *.video.qq.com, v.qq.com
 
 # 京东签到获取cookie
 https:\/\/api\.m\.jd\.com\/client\.action.*functionId=signBean url script-request-header https://raw.githubusercontent.com/NobyDa/Script/master/JD-DailyBonus/JD_DailyBonus.js
 
-#52破解论坛获取Cookie
-https:\/\/www\.52pojie\.cn\/home\.php\?mod=space url script-request-header https://raw.githubusercontent.com/NobyDa/Script/master/52pojie-DailyBonus/52pojie.js
+# 52破解论坛获取Cookie
+https:\/\/www\.52pojie\.cn\/home\.php\?mod=space url script-request-header https://raw.githubusercontent.com/re2/g/master/52pojie.js
 
 # 中国联通获取cookie
 ^https:\/\/act.10010.com\/SigninApp\/signin\/querySigninActivity.htm url script-request-header https://raw.githubusercontent.com/re2/g/master/10010.cookie.js
@@ -19,3 +19,20 @@ https:\/\/www\.52pojie\.cn\/home\.php\?mod=space url script-request-header https
 # 中国移动获取cookie
 ^https:\/\/clientaccess.10086.cn\/biz-orange\/LN\/uamrandcodelogin\/autoLogin url script-request-body https://raw.githubusercontent.com/re2/g/master/10086.fee.cookie.js
 ^https:\/\/clientaccess.10086.cn\/biz-orange\/BN\/realFeeQuery\/getRealFee url script-request-body https://raw.githubusercontent.com/re2/g/master/10086.fee.cookie.js
+
+# 企鹅读书获取更新body
+https:\/\/mqqapi\.reader\.qq\.com\/log\/v4\/mqq\/track url script-request-body https://raw.githubusercontent.com/ziye12/JavaScript/master/Task/qqreads.js
+# 企鹅读书获取时长cookie获取方法：进 https://m.q.qq.com/a/s/d3eacc70120b9a37e46bad408c0c4c2a
+https:\/\/mqqapi\.reader\.qq\.com\/mqq\/addReadTimeWithBid? url script-request-header https://raw.githubusercontent.com/ziye12/JavaScript/master/Task/qqreads.js
+
+# 爱奇艺 cookie
+https?:\/\/.*\.iqiyi\.com\/.*authcookie= url script-request-header https://raw.githubusercontent.com/re2/g/master/iQIYI.js
+
+# 百度贴吧cookie获取，当失效时需手动登录https://tieba.baidu.com/index.html贴吧获取cookie，待弹出获取成功即可
+^https?:\/\/tieba\.baidu\.com\/?.? url script-request-header https://raw.githubusercontent.com/re2/g/master/tieba.cookie.js
+
+# 喜马拉雅
+^https?:\/\/.*\/mobile\-user\/homePage\/.* url script-request-header https://raw.githubusercontent.com/re2/g/master/ximalaya.cookie.js
+
+# 腾讯视频，获取 Cookie:手机浏览器访问: https://film.qq.com/，随便选 1 部电影观看
+^https:\/\/access.video.qq.com\/user\/auth_refresh url script-request-header https://raw.githubusercontent.com/re2/g/master/videoqq.cookie.js
