--- a/GetCookie.conf
+++ b/GetCookie.conf
@@ -21,9 +21,9 @@ https:\/\/www\.52pojie\.cn\/home\.php\?mod=space url script-request-header https
 ^https:\/\/clientaccess.10086.cn\/biz-orange\/BN\/realFeeQuery\/getRealFee url script-request-body https://raw.githubusercontent.com/re2/g/master/10086.fee.cookie.js
 
 # 企鹅读书获取更新body
-https:\/\/mqqapi\.reader\.qq\.com\/log\/v4\/mqq\/track url script-request-body https://raw.githubusercontent.com/ziye12/JavaScript/master/Task/qqreads.js
+https:\/\/mqqapi\.reader\.qq\.com\/log\/v4\/mqq\/track url script-request-body https://raw.githubusercontent.com/re2/g/master/qqread.js
 # 企鹅读书获取时长cookie获取方法：进 https://m.q.qq.com/a/s/d3eacc70120b9a37e46bad408c0c4c2a
-https:\/\/mqqapi\.reader\.qq\.com\/mqq\/addReadTimeWithBid? url script-request-header https://raw.githubusercontent.com/ziye12/JavaScript/master/Task/qqreads.js
+https:\/\/mqqapi\.reader\.qq\.com\/mqq\/addReadTimeWithBid? url script-request-header https://raw.githubusercontent.com/re2/g/master/qqread.js
 
 # 爱奇艺 cookie
 https?:\/\/.*\.iqiyi\.com\/.*authcookie= url script-request-header https://raw.githubusercontent.com/re2/g/master/iQIYI.js
